css/style.css
/* ... */
.box-comments .list-comments .comment-description {
  padding: .8rem 0 .5rem 0;
}

.box-comments .list-comments a {
  color: #000000;
}

.box-comments .list-comments span {
  display: block;
  color: #2B2A2A;
  font-style: italic;
}

.box-comments .comment-children {
  margin-left: 40px;
}

/*======================================
//--//-->   SERVICES - CARD-C
======================================*/

.card-box-c {
  position: relative;
}

.card-header-c {
  padding: 0 0 0 0 ;
}

.card-body-c {
  padding: .5rem .5rem 0 .5rem;
  font-size: 1.2rem;
}

.card-footer-c {
  padding-left: .5rem;
}

.card-box-ico {
  padding: 1rem 1rem 1rem 1rem;
}

.card-box-ico span {
  font-size: 4rem;
  color: #000000;
}

.title-c {
  font-size: 2.5rem;
  font-weight: 600;
}

.title-f {
  font-size: 2rem;
  font-weight: 600;
}

/*======================================
//--//-->   AGENTS - CARD-D
======================================*/

.card-box-d .card-overlay-hover {
  transition: all .2s ease-in-out;
  padding: 15px 15px 15px 15px;
}

.card-box-d .title-d {
  transition: .3s ease-in-out;
  color: white;
  font-size: 3rem;
  font-weight: 500;
  /* margin: 1rem 0; */
  -webkit-transform: translateY(-20px);
  transform: translateY(-20px);
  opacity: 0;
}

.card-box-d .subtitle-d {
  transition: .3s ease-in-out;
  color: #c7c7c7;
  font-size: 2rem;
  font-weight: 500;
  /* margin: 1rem 0; */
  -webkit-transform: translateY(-20px);
  transform: translateY(-20px);
  opacity: 0;
}

.card-box-d .content-d {
  opacity: 0;
  font-size: 1rem;
  color: white;
  transition: .5s ease-in-out;
  -webkit-transform: translateY(-40px);
  transform: translateY(-40px);
}

.card-box-d .info-agents {
  opacity: 0;
  border: white solid 0.1rem;
  padding: 10%;
  height: 90%;
  width: 90%;
  border-radius: 5rem;
  transition: .5s ease-in-out;
}

.card-box-d .card-footer-d {
  transition: .5s ease-in-out;
  -webkit-transform: translateY(40px);
  transform: translateY(40px);
  opacity: 0;
  position: absolute;
  width: 100%;
  bottom: 10px;
  left: 0;
}

.card-box-d .list-inline-item:not(:last-child) {
  margin-right: 25px;
}

.card-box-d:hover .card-overlay-hover {
  background-color: #4b5cff;
  opacity: .9;
}

.card-box-d:hover .title-d,
.card-box-d:hover .subtitle-d,
.card-box-d:hover .content-d,
.card-box-d:hover .info-agents,
.card-box-d:hover .card-footer-d {
  opacity: 1;
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

/*------/ Agent Single /------*/

.agent-info-box .socials-footer {
  margin-top: 2rem;
}

.agent-info-box .socials-footer li {
  margin-right: 1.5rem;
}

/*======================================
//--//-->   ABOUT
======================================*/
.section-about {
  margin-bottom: 5rem;
}

.section-about .title-vertical {
  position: absolute;
  letter-spacing: 0;
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
  top: 50px;
  text-align: left;
  font-size: 1.8rem;
  width: 300px;
  font-weight: 700;
  text-align: right;
}

.about-img-box {
  padding-left: 1rem;
  position: relative;
  margin-bottom: 3rem;
}

.sinse-box {
  background-color: #4b5cff;
  padding: 1rem 2rem;
  position: absolute;
  left: 15px;
  bottom: 10px;
}

.sinse-box .sinse-title {
  font-weight: 700;
  letter-spacing: 0.1em;
  font-size: 1rem;
  color: #ffffff;
}

.sinse-box .sinse-title span {
  position: absolute;
}

.sinse-box .sinse-title span:after {
  content: ' ';
  width: 35px;
  height: 2px;
  background-color: #ffffff;
  position: absolute;
  bottom: -15px;
}

.sinse-box p {
  margin-bottom: 0;
  font-size: .7rem;
}

/*======================================
//--//-->   TESTIMONIALS
======================================*/

.testimonials-box {
  padding: 1rem 0;
}

.testimonials-box .testimonial-avatar {
  width: 80px !important;
  display: -webkit-inline-box !important;
  display: -webkit-inline-flex !important;
  display: -ms-inline-flexbox !important;
  display: inline-flex !important;
  border-radius: 50%;
}

.testimonial-ico {
  text-align: center;
}

.testimonial-ico span {
  font-size: 1.8rem;
  background-color: #4b5cff;
  color: #ffffff;
  padding: .4rem 1rem;
  border-radius: 50px;
}

.testimonial-text {
  font-style: italic;
  margin-top: 25px;
  padding: 1.5rem 1.5rem;
  background-color: #f3f3f3;
  position: relative;
}

.testimonial-text:after {
  content: "";
  position: absolute;
  top: 100%;
  left: 25px;
  width: 0px;
  height: 0px;
  border-top: 15px solid #f3f3f3;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
}

.testimonial-author-box {
  margin-top: 2rem;
}

.testimonial-author {
  margin-left: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1.2rem;
  color: #000000;
}

/*======================================
//--//-->   FOOTER
======================================*/

.section-footer {
  padding-top: 60px;
  margin-top: 60px;
  background: #f3f3f3;
}

.section-footer ul {
  line-height: 2;
}

.section-footer .item-list-a i {
  font-size: 18px;
  padding-right: 4px;
  color: #4b5cff;
}

.section-footer .widget-a .w-title-a {
  margin-bottom: 1rem;
}

footer {
  background: #f3f3f3;
  text-align: center;
  padding: 30px 0;
}

footer .copyright-footer {
  border-top: 1px solid #ddd;
  padding-top: 20px;
}

footer .credits {
  font-size: 14px;
}

/*======================================
//--//-->   FORM INPUT
======================================*/

.form-a #sendmessage {
  color: #4b5cff;
  border: 1px solid #4b5cff;
  display: none;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

.form-a #errormessage {
  color: red;
  display: none;
  border: 1px solid red;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

.form-a #sendmessage.show,
.form-a #errormessage.show,
.form-a .show {
  display: block;
}
/* ... */

